public class salaInfor {
    private int numEquipos;
    public void salaInfor(String nombre, int capacidad, String pizarra, String tipo, boolean disponible, int numEquipos) {
        // TODO: Implementar el método
    }
}
