public class salaestudio {
    private int numMesas;
    public void salaestudio(String nombre, int capacidad, String pizarra, String tipo, boolean disponible, int numMesas) {
        // TODO: Implementar el método
    }
}
