package poo;


// Praáctica 5, crear herencia de persona usuario

public class empleado extends personapoo 
{

    private String puesto;
    private double sueldo;

    public empleado(String puesto, double sueldo) 
    {
    this.puesto = puesto;
    this.sueldo = sueldo;
    }

}




