' Generated by UML Generator
' Encoded: lLTBZzis4Bxlh-1HhcqWPwC8udODT8iaCBf1WQBeWPAupgGIgPBK8aYQ_UqTKdpJMkIolQnNmvdXDmz-7BvHcaezZyED-XluH2KTIJTGfOvQIsXdpUuwmU_X2oElRZv2pqW7iXlOpOtL8Ysq0mZozOQGFHTZAzc1tACblnX93v9r7GYU2ZyAIIM8uyHmOqaF1BXEv3y3ayQBamxGIg4Ev2qe_QFzU6t4YkBsJch-Dy8dzAW43tBtEOd5P8z_jWlU9eUw8nNG7Ra6CqWJa1lZ-yBqU-kosQIXelZMUwvMViatCEikvhYux9CigR1H7W9gF0hedKhSj0eiLomnN0lwgeK3TYKTGNlBiBUEBIxfnN6vFWgbZJb_47AaFaT-bVRzMrFknXRzGEnFiYxPA1xPioheuXvxep4DSY3cRsM_lkxG6GNLr7AxSRRGpgfpyhEG7q3FWsYq_KcIRp6M_l_mdTki0BW5DGcElSio5Iqq7MxPsLcVk0qd2_82rille03BC1r8F1LffXHSE9M_CREDehXFevQCxCXLcs-U0DWu3OpsZWAc6OikqaPNCnjwbFHYHg_X77gp9hVOaLn_4pUoYRExFEL9DH9GBVTdv8dre8K4EcGQFOYHfX8-ZsTw0SiNpf9o4E6ZDpatVC4mBKm-qfpPV44Ef1K2O-6f60ReQPyQsAZnOBk-ACdW3WF86U3aewXrRIYL-7s89tTqnA1oIUmc5rdkImMKLVScH60HXxpdQn5xLOl2oH9ANfnS9Gchg5YkPyCC1Ipvi0ouBoNrvfQ_ecMJhPm-uwdYdvWKgNo5ofuXkhozUxZ0Sf2iPdwID1rDUEz-gWvJi2qAjYEXFZjILG9NixJlICYUkH1NyhCZ1RGTgO2Lf_O1oQVpGq9rwlPp2nqjfuGOs6BzluHMWDkH2beIsaY1svYsNx5HD7JVhAYXygAy-fz_LOMENBgG6PtOW6mXLCfDFOVqaw7ZZCqq6zY3u1a7JfWgfl8qMaR3PiLDWV4EQ4AIXfzS1Jmv7JsMUepXKCbE1bKb_U2WLGjdZwzQEHOWytadWgfILPnon9Wahg0a2pPBPAuGS9UvpTLY55M-QpxAWhfQYe9kViM66york4clbUyY47DPhytX7PtGAgtu15-ebDcLfc4Itt75-L7bbd5jXgvhexQCSqGwF8HMCrYh6Jm7YND73X5v9W6O7kC0R_CyQpy_Rvfmg7IZLFDvPL32mgP3qjeyTVqzOCIfzQP8pbQqcd4cySh3Y-MS9TgVYQpU6ElSGsJMTqmbl1fIxTHU8EEMCkEkcnpUdSbq07VwPqPtL-1PjPS2b-vQm1jOPnuv2y2LTsO0wPHVgclZQwTunWJ4ivhDKokayrvqSLXryC_IT7-_5eTpqMJM6z-lJXZ9TpjPTt8Lc7lyY_tUFMiIWSbP-fqqUdWoxFV_lauNuWnaLnQVwGIHY2tT5Owjx8TQve-9DRV0OdVcCjyIrwKnK5-CCW8lZvfl6E_dSVWF
' URL: http://www.plantuml.com/plantuml/uml/lLTBZzis4Bxlh-1HhcqWPwC8udODT8iaCBf1WQBeWPAupgGIgPBK8aYQ_UqTKdpJMkIolQnNmvdXDmz-7BvHcaezZyED-XluH2KTIJTGfOvQIsXdpUuwmU_X2oElRZv2pqW7iXlOpOtL8Ysq0mZozOQGFHTZAzc1tACblnX93v9r7GYU2ZyAIIM8uyHmOqaF1BXEv3y3ayQBamxGIg4Ev2qe_QFzU6t4YkBsJch-Dy8dzAW43tBtEOd5P8z_jWlU9eUw8nNG7Ra6CqWJa1lZ-yBqU-kosQIXelZMUwvMViatCEikvhYux9CigR1H7W9gF0hedKhSj0eiLomnN0lwgeK3TYKTGNlBiBUEBIxfnN6vFWgbZJb_47AaFaT-bVRzMrFknXRzGEnFiYxPA1xPioheuXvxep4DSY3cRsM_lkxG6GNLr7AxSRRGpgfpyhEG7q3FWsYq_KcIRp6M_l_mdTki0BW5DGcElSio5Iqq7MxPsLcVk0qd2_82rille03BC1r8F1LffXHSE9M_CREDehXFevQCxCXLcs-U0DWu3OpsZWAc6OikqaPNCnjwbFHYHg_X77gp9hVOaLn_4pUoYRExFEL9DH9GBVTdv8dre8K4EcGQFOYHfX8-ZsTw0SiNpf9o4E6ZDpatVC4mBKm-qfpPV44Ef1K2O-6f60ReQPyQsAZnOBk-ACdW3WF86U3aewXrRIYL-7s89tTqnA1oIUmc5rdkImMKLVScH60HXxpdQn5xLOl2oH9ANfnS9Gchg5YkPyCC1Ipvi0ouBoNrvfQ_ecMJhPm-uwdYdvWKgNo5ofuXkhozUxZ0Sf2iPdwID1rDUEz-gWvJi2qAjYEXFZjILG9NixJlICYUkH1NyhCZ1RGTgO2Lf_O1oQVpGq9rwlPp2nqjfuGOs6BzluHMWDkH2beIsaY1svYsNx5HD7JVhAYXygAy-fz_LOMENBgG6PtOW6mXLCfDFOVqaw7ZZCqq6zY3u1a7JfWgfl8qMaR3PiLDWV4EQ4AIXfzS1Jmv7JsMUepXKCbE1bKb_U2WLGjdZwzQEHOWytadWgfILPnon9Wahg0a2pPBPAuGS9UvpTLY55M-QpxAWhfQYe9kViM66york4clbUyY47DPhytX7PtGAgtu15-ebDcLfc4Itt75-L7bbd5jXgvhexQCSqGwF8HMCrYh6Jm7YND73X5v9W6O7kC0R_CyQpy_Rvfmg7IZLFDvPL32mgP3qjeyTVqzOCIfzQP8pbQqcd4cySh3Y-MS9TgVYQpU6ElSGsJMTqmbl1fIxTHU8EEMCkEkcnpUdSbq07VwPqPtL-1PjPS2b-vQm1jOPnuv2y2LTsO0wPHVgclZQwTunWJ4ivhDKokayrvqSLXryC_IT7-_5eTpqMJM6z-lJXZ9TpjPTt8Lc7lyY_tUFMiIWSbP-fqqUdWoxFV_lauNuWnaLnQVwGIHY2tT5Owjx8TQve-9DRV0OdVcCjyIrwKnK5-CCW8lZvfl6E_dSVWF
' Generated on: 2025-11-26T13:51:11.700834600

@startuml
skinparam classAttributeIconSize 0
hide circle

class biblio {
  -nombre: String
  -direccion: String
  -horarioApertura: int
  -horarioCierre: int
  -libros: List<libro>
  -salas: List<sala>
  ~personas: List<personapoo>
  --
  +biblio(nombre: String, direccion: String, horarioApertura: int, horarioCierre: int)
  -getNombre(): String
  -getDireccion(): String
  -getHorarioApertura(): int
  -getHorarioCierre(): int
  -setNombre(nombre: String): void
  -setDireccion(direccion: String): void
  -setHorarioApertura(horarioApertura: int): void
  -setHorarioCierre(horarioCierre: int): void
  +estaAbierta(hora: int): void
  +mostrarinformacion(): void
  +addLibro(libro: libro): void
  +removeLibro(libro: libro): void
  +addSala(sala: sala): void
  +removeSala(sala: sala): void
  +mostrarSalas(): void
  +mostrarLibros(): void
  +buscarLibroPorTitulo(titulo: String): libro
  +mostrarSalasYpersonas(): void
  +mostrarSalasDisponibles(): void
  +totalDePersonasEnSala(): void
  +registrarVisita(p: personapoo): void
  +asignarResponsable(s: sala, p: personapoo): void
}

class empleado {
  -puesto: String
  -sueldo: double
  --
  +empleado(puesto: String, sueldo: double)
}

class libro {
  ~titulo: String
  ~isbn: int
  ~editorial: String
  ~idioma: String
  ~numPaginas: int
  ~anio: int
  ~dispobibleReserva: String
  -disponible: boolean
  -disponibilidad: String
  --
  +getTitulo(): String
  -getIsbn(): int
  -getEditorial(): String
  -getIdioma(): String
  -getNumPaginas(): int
  -getAnio(): int
  -getDisponibleReserva(): String
  -setTitulo(titulo: String): void
  -setIsbn(isbn: int): void
  -setEditorial(editorial: String): void
  -setIdioma(idioma: String): void
  -setNumPaginas(numPaginas: int): void
  -setAnio(anio: int): void
  -setDisponibleReserva(disponibleReserva: String): void
  +estaDisponible(): void
  +esExtranjero(): void
  +informacion(): void
  +mostrarinformacion(): void
}

class librodigi {
  -formato: String
  -tamanioMB: double
  --
  +librodigi(titulo: String, isbn: int, editorial: String, idioma: String, anio: int, disponibleReserva: String, formato: String, tamanioMB: double)
}

class librofisico {
  -numPaginas: int
  -ubicacion: String
  --
  +librofisico(titulo: String, isbn: int, editorial: String, idioma: String, anio: int, disponibleReserva: String, numPaginas: int, ubicacion: String)
}

class main {
  +{static} main(args: String[]): void
}

class personapoo {
  ~apellidos: String
  ~dni: String
  ~email: String
  ~telefono: String
  ~profesion: String
  ~aniosExperiencia: int
  ~edad: int
  --
  +getApellidos(): String
  -getDni(): String
  -getEmail(): String
  -getTelefono(): String
  -getProfesion(): String
  -getAniosExperiencia(): int
  -setApellidos(apellidos: String): void
  -setDni(dni: String): void
  -setEmail(email: String): void
  -setTelefono(telefono: String): void
  -setProfesion(profesion: String): void
  -setAniosExperiencia(aniosExperiencia: int): void
  +estaJubilado(): boolean
  +mostrarinformacion(): void
}

class sala {
  -nombre: String
  -capacidad: int
  -pizarra: String
  -tipo: String
  -disponible: boolean
  -personasDentro: List<personapoo>
  -responsable: personapoo
  --
  +sala(nombre: String, capacidad: int, pizarra: String, tipo: String, disponible: boolean)
  +estaDisponible(): void
  +mostrarinformacion(): void
  +entrarPersona(x: personapoo): void
  +setResponsable(p: personapoo): void
  +getNombre(): String
  +getResponsable(): personapoo
  +obtenerNumeroPersonasDentro(): int
}

class salaestudio {
  -numMesas: int
  --
  +salaestudio(nombre: String, capacidad: int, pizarra: String, tipo: String, disponible: boolean, numMesas: int)
}

class salaInfor {
  -numEquipos: int
  --
  +salaInfor(nombre: String, capacidad: int, pizarra: String, tipo: String, disponible: boolean, numEquipos: int)
}

class salalectura {
  -libros: List<libro>
  --
  +salalectura(nombre: String, capacidad: int, pizarra: String, tipo: String, disponible: boolean)
  +addLibro(l: libro): void
}

class usuario {
  -numSocio: int
  -librosPrestados: List<libro>
  --
  +usuario(numSocio: int)
  +getNumSocio(): int
  +prestarLibro(l: libro): void
}

biblio o-- libro
biblio o-- sala
biblio o-- personapoo
empleado --|> personapoo
librodigi --|> libro
librofisico --|> libro
sala o-- personapoo
sala *-- personapoo
salaestudio --|> sala
salaInfor --|> sala
salalectura --|> sala
salalectura o-- libro
usuario --|> personapoo
usuario o-- libro
@enduml